fix: adding graceful handling for errors when a line is unbale to be read

--- a/noteooks/test_general.ipynb
+++ b/noteooks/test_general.ipynb
@@ -2,9 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-06-28 13:54:47,426 [ERROR] UniLogger: UniLoader._load_jsonl: ❌ JSON decode error on line 4: invalid escaped character in string: line 1 column 23 (char 22)\n",
+      "Content: {\"id\": 3, \"name\": \"Ch\\x96arlie\"}\n",
+      "\n",
+      "2024-06-28 13:54:47,427 [WARNING] UniLogger: UniLoader._load_jsonl: ⚠️ NaN found and replaced with null on line 5\n",
+      "2024-06-28 13:54:47,427 [INFO] UniLogger: UniLoader.loads: .jsonl LOADED from \"test_jsonl_fail.jsonl\" in 0.00s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'note': 'testing for handling lines containing non-utf-8 character (id3), and NaN value (id4)'},\n",
+       " {'id': 1, 'name': 'Alice'},\n",
+       " {'id': 2, 'name': 'Bob'},\n",
+       " {'id': 4, 'name': None},\n",
+       " {'id': 5, 'name': 'Eve'}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import unibox as ub"
    ]
@@ -95,6 +121,158 @@
    "source": [
     "# test: save to s3 directly\n",
     "ub.saves(img, \"s3://unidataset-danbooru/something.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test jsonl save:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-06-28 13:10:37,710 [INFO] UniLogger: UniSaver.saves: list saved successfully to \"sample.jsonl\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "jsonl_sample = [\n",
+    "    {\"id\": 1, \"name\": \"Alice\"},\n",
+    "    {\"id\": 2, \"name\": \"Bob\"},\n",
+    "    {\"id\": 3, \"name\": \"Charlie\"},\n",
+    "]\n",
+    "\n",
+    "ub.saves(jsonl_sample, \"sample.jsonl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-06-28 13:10:53,285 [INFO] UniLogger: UniLoader.loads: .jsonl LOADED from \"sample.jsonl\" in 0.00s\n"
+     ]
+    }
+   ],
+   "source": [
+    "jsonl_sample_read = ub.loads(\"sample.jsonl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1, 'name': 'Alice'},\n",
+       " {'id': 2, 'name': 'Bob'},\n",
+       " {'id': 3, 'name': 'Charlie'}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jsonl_sample_read"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test jsonl save & read 2:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-06-28 13:53:42,495 [ERROR] UniLogger: UniLoader._load_jsonl: ❌ JSON decode error on line 3: invalid escaped character in string: line 1 column 23 (char 22)\n",
+      "Content: {\"id\": 3, \"name\": \"Ch\\x96arlie\"}  # Contains a non-UTF-8 character (\\x96)\n",
+      "\n",
+      "2024-06-28 13:53:42,495 [WARNING] UniLogger: UniLoader._load_jsonl: ⚠️ NaN found and replaced with null on line 4\n",
+      "2024-06-28 13:53:42,496 [ERROR] UniLogger: UniLoader._load_jsonl: ❌ JSON decode error on line 4 after replacing NaN: unexpected content after document: line 1 column 36 (char 35)\n",
+      "Content: {\"id\": 4, \"name\": null}            # Contains a null value (should be n_ull)\n",
+      "\n",
+      "2024-06-28 13:53:42,497 [INFO] UniLogger: UniLoader.loads: .jsonl LOADED from \"test_jsonl_fail.jsonl\" in 0.00s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1, 'name': 'Alice'},\n",
+       " {'id': 2, 'name': 'Bob'},\n",
+       " {'id': 5, 'name': 'Eve'}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jsonl3_read = ub.loads(\"test_jsonl_fail.jsonl\")\n",
+    "jsonl3_read"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-06-28 13:32:11,610 [INFO] UniLogger: UniLoader.loads: .jsonl LOADED from \"sdxl_qft_v5.jsonl\" in 0.52s\n"
+     ]
+    }
+   ],
+   "source": [
+    "jsonl4_read = ub.loads(\"sdxl_qft_v5.jsonl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "def find_error_in_jsonl(file_path):\n",
+    "    with open(file_path, 'r') as f:\n",
+    "        for i, line in enumerate(f, start=1):\n",
+    "            try:\n",
+    "                json.loads(line)\n",
+    "            except json.JSONDecodeError as e:\n",
+    "                print(f\"Error on line {i}: {e}\")\n",
+    "                print(f\"Content: {line}\")\n",
+    "                break\n",
+    "\n",
+    "file_path = \"sdxl_qft_v5.jsonl\"\n",
+    "find_error_in_jsonl(file_path)"
    ]
   }
  ],
