fix: UniSaver: replace NaN with null if saving to dict or jsonl

--- a/noteooks/test_general.ipynb
+++ b/noteooks/test_general.ipynb
@@ -2,35 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-06-28 13:54:47,426 [ERROR] UniLogger: UniLoader._load_jsonl: ❌ JSON decode error on line 4: invalid escaped character in string: line 1 column 23 (char 22)\n",
-      "Content: {\"id\": 3, \"name\": \"Ch\\x96arlie\"}\n",
-      "\n",
-      "2024-06-28 13:54:47,427 [WARNING] UniLogger: UniLoader._load_jsonl: ⚠️ NaN found and replaced with null on line 5\n",
-      "2024-06-28 13:54:47,427 [INFO] UniLogger: UniLoader.loads: .jsonl LOADED from \"test_jsonl_fail.jsonl\" in 0.00s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'note': 'testing for handling lines containing non-utf-8 character (id3), and NaN value (id4)'},\n",
-       " {'id': 1, 'name': 'Alice'},\n",
-       " {'id': 2, 'name': 'Bob'},\n",
-       " {'id': 4, 'name': None},\n",
-       " {'id': 5, 'name': 'Eve'}]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import unibox as ub"
    ]
@@ -208,21 +182,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-28 13:53:42,495 [ERROR] UniLogger: UniLoader._load_jsonl: ❌ JSON decode error on line 3: invalid escaped character in string: line 1 column 23 (char 22)\n",
-      "Content: {\"id\": 3, \"name\": \"Ch\\x96arlie\"}  # Contains a non-UTF-8 character (\\x96)\n",
+      "2024-06-28 14:12:00,273 [ERROR] UniLogger: UniLoader._load_jsonl: ❌ JSON decode error on line 4: invalid escaped character in string: line 1 column 23 (char 22)\n",
+      "Content: {\"id\": 3, \"name\": \"Ch\\x96arlie\"}\n",
       "\n",
-      "2024-06-28 13:53:42,495 [WARNING] UniLogger: UniLoader._load_jsonl: ⚠️ NaN found and replaced with null on line 4\n",
-      "2024-06-28 13:53:42,496 [ERROR] UniLogger: UniLoader._load_jsonl: ❌ JSON decode error on line 4 after replacing NaN: unexpected content after document: line 1 column 36 (char 35)\n",
-      "Content: {\"id\": 4, \"name\": null}            # Contains a null value (should be n_ull)\n",
-      "\n",
-      "2024-06-28 13:53:42,497 [INFO] UniLogger: UniLoader.loads: .jsonl LOADED from \"test_jsonl_fail.jsonl\" in 0.00s\n"
+      "2024-06-28 14:12:00,274 [WARNING] UniLogger: UniLoader._load_jsonl: ⚠️ NaN found and replaced with null on line 5\n",
+      "2024-06-28 14:12:00,275 [INFO] UniLogger: UniLoader.loads: .jsonl LOADED from \"test_jsonl_fail.jsonl\" in 0.00s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'id': 1, 'name': 'Alice'},\n",
+       "[{'note': 'testing for handling lines containing non-utf-8 character (id3), and NaN value (id4)'},\n",
+       " {'id': 1, 'name': 'Alice'},\n",
        " {'id': 2, 'name': 'Bob'},\n",
+       " {'id': 4, 'name': None},\n",
        " {'id': 5, 'name': 'Eve'}]"
       ]
      },
@@ -237,42 +210,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test saving invalid values (NaN) to a jsonl file:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-28 13:32:11,610 [INFO] UniLogger: UniLoader.loads: .jsonl LOADED from \"sdxl_qft_v5.jsonl\" in 0.52s\n"
+      "2024-06-28 14:12:04,549 [INFO] UniLogger: UniSaver.saves: list saved successfully to \"test_invalid_values.jsonl\"\n"
      ]
     }
    ],
    "source": [
-    "jsonl4_read = ub.loads(\"sdxl_qft_v5.jsonl\")"
+    "test_list = [\n",
+    "    {\"id\": 1, \"name\": \"Alice\"},\n",
+    "    {\"id\": 2, \"name\": \"Bob\"},\n",
+    "    {\"id\": 3, \"name\": None},  # Contains a None value\n",
+    "    {\"id\": 4, \"name\": float('nan')},  # Contains a NaN value\n",
+    "    {\"id\": 5, \"name\": \"Eve\"}\n",
+    "]\n",
+    "\n",
+    "ub.saves(test_list, \"test_invalid_values.jsonl\") # shouldn't contain \"NaN\" in the output file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-06-28 14:12:49,608 [INFO] UniLogger: UniSaver.saves: dict saved successfully to \"test_invalid_values.json\"\n"
+     ]
+    }
+   ],
    "source": [
-    "import json\n",
+    "test_dict = {\n",
+    "    \"id\": 1,\n",
+    "    \"name\": \"Alice\",\n",
+    "    \"age\": None,  # Contains a None value\n",
+    "    \"height\": float('nan'),  # Contains\n",
+    "}\n",
     "\n",
-    "def find_error_in_jsonl(file_path):\n",
-    "    with open(file_path, 'r') as f:\n",
-    "        for i, line in enumerate(f, start=1):\n",
-    "            try:\n",
-    "                json.loads(line)\n",
-    "            except json.JSONDecodeError as e:\n",
-    "                print(f\"Error on line {i}: {e}\")\n",
-    "                print(f\"Content: {line}\")\n",
-    "                break\n",
-    "\n",
-    "file_path = \"sdxl_qft_v5.jsonl\"\n",
-    "find_error_in_jsonl(file_path)"
+    "ub.saves(test_dict, \"test_invalid_values.json\") # shouldn't contain \"NaN\" in the output file"
    ]
   }
  ],
