--- a/noteooks/test_general.ipynb
+++ b/noteooks/test_general.ipynb
@@ -264,6 +264,25 @@
     "\n",
     "ub.saves(test_dict, \"test_invalid_values.json\") # shouldn't contain \"NaN\" in the output file"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "test_dict = {\n",
+    "    \"id\": 1,\n",
+    "    \"name\": \"Alice\",\n",
+    "    \"age\": None,  # Contains a None value\n",
+    "    \"height\": float('nan'), \n",
+    "    \"weight\": np.nan, \n",
+    "}\n",
+    "\n",
+    "ub.saves(test_dict, \"test_invalid_values.json\") # shouldn't contain \"NaN\" in the output file"
+   ]
   }
  ],
  "metadata": {
