feat: adding concurrent_loads() function

--- a/noteooks/test_general.ipynb
+++ b/noteooks/test_general.ipynb
@@ -17,6 +17,43 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "97ff8cf6762e4a9eba9d3647d5cf4a78",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading batches:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-18 06:57:20,191 [INFO] UniLogger: UniLoader.loads: .parquet LOADED from \"/tmp/tmp8yq_cjdo/1.todo.parquet\" in 0.10s\n",
+      "2024-07-18 06:57:20,199 [INFO] UniLogger: UniLoader.loads: .parquet LOADED from \"/tmp/tmpn7vmvaxv/0.todo.parquet\" in 0.10s\n",
+      "2024-07-18 06:57:20,211 [INFO] UniLogger: UniLoader.loads: .parquet LOADED from \"/tmp/tmpfhnxzxxj/2.todo.parquet\" in 0.10s\n"
+     ]
+    }
+   ],
+   "source": [
+    "uris = [\"s3://dataset-pixiv/sagemaker/20240228_half_pixiv_optmize_workflow/0.todo.parquet\",\n",
+    "        \"s3://dataset-pixiv/sagemaker/20240228_half_pixiv_optmize_workflow/1.todo.parquet\",\n",
+    "        \"s3://dataset-pixiv/sagemaker/20240228_half_pixiv_optmize_workflow/2.todo.parquet\",]\n",
+    "\n",
+    "results = ub.concurrent_loads(uris)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
        "model_id": "d8819d90d59b47a8851273ebd5124422",
        "version_major": 2,
        "version_minor": 0
@@ -267,21 +304,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-06-28 14:16:02,632 [INFO] UniLogger: UniSaver.saves: list saved successfully to \"test_invalid_values2.jsonl\"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "test_dict = {\n",
+    "test_dict = [{\n",
     "    \"id\": 1,\n",
     "    \"name\": \"Alice\",\n",
     "    \"age\": None,  # Contains a None value\n",
     "    \"height\": float('nan'), \n",
     "    \"weight\": np.nan, \n",
-    "}\n",
+    "}]\n",
     "\n",
-    "ub.saves(test_dict, \"test_invalid_values.json\") # shouldn't contain \"NaN\" in the output file"
+    "ub.saves(test_dict, \"test_invalid_values2.jsonl\") # shouldn't contain \"NaN\" in the output file"
    ]
   }
  ],
