feat: uni_peeker: adding peek_df functionality

--- a/noteooks/test_general.ipynb
+++ b/noteooks/test_general.ipynb
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97ff8cf6762e4a9eba9d3647d5cf4a78",
+       "model_id": "2bcb6492a137496ea24c2e928dabd49b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -32,18 +32,101 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-18 06:57:20,191 [INFO] UniLogger: UniLoader.loads: .parquet LOADED from \"/tmp/tmp8yq_cjdo/1.todo.parquet\" in 0.10s\n",
-      "2024-07-18 06:57:20,199 [INFO] UniLogger: UniLoader.loads: .parquet LOADED from \"/tmp/tmpn7vmvaxv/0.todo.parquet\" in 0.10s\n",
-      "2024-07-18 06:57:20,211 [INFO] UniLogger: UniLoader.loads: .parquet LOADED from \"/tmp/tmpfhnxzxxj/2.todo.parquet\" in 0.10s\n"
+      "2024-07-18 07:16:36,547 [INFO] UniLogger: UniLoader.loads: .parquet LOADED from \"/tmp/tmpbh_o0fl5/2.todo.parquet\" in 0.04s\n",
+      "2024-07-18 07:16:36,551 [INFO] UniLogger: UniLoader.loads: .parquet LOADED from \"/tmp/tmpmd82jtem/0.todo.parquet\" in 0.05s\n",
+      "2024-07-18 07:16:36,614 [INFO] UniLogger: UniLoader.loads: .parquet LOADED from \"/tmp/tmpslqwivjr/1.todo.parquet\" in 0.05s\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(150000, 5)\n",
+      "Index(['filename', 's3_uri', 'pid', 'metadata_s3_uri', 'image_s3_size'], dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>s3_uri</th>\n",
+       "      <th>pid</th>\n",
+       "      <th>metadata_s3_uri</th>\n",
+       "      <th>image_s3_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>86114542_p0.png</td>\n",
+       "      <td>s3://dataset-pixiv/artworks/86114542/86114542_...</td>\n",
+       "      <td>86114542</td>\n",
+       "      <td>s3://dataset-pixiv/artworks/86114542/metadata....</td>\n",
+       "      <td>310612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>86114543_p0.jpg</td>\n",
+       "      <td>s3://dataset-pixiv/artworks/86114543/86114543_...</td>\n",
+       "      <td>86114543</td>\n",
+       "      <td>s3://dataset-pixiv/artworks/86114543/metadata....</td>\n",
+       "      <td>6745018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>86114544_p0.jpg</td>\n",
+       "      <td>s3://dataset-pixiv/artworks/86114544/86114544_...</td>\n",
+       "      <td>86114544</td>\n",
+       "      <td>s3://dataset-pixiv/artworks/86114544/metadata....</td>\n",
+       "      <td>3538392</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          filename                                             s3_uri  \\\n",
+       "0  86114542_p0.png  s3://dataset-pixiv/artworks/86114542/86114542_...   \n",
+       "1  86114543_p0.jpg  s3://dataset-pixiv/artworks/86114543/86114543_...   \n",
+       "2  86114544_p0.jpg  s3://dataset-pixiv/artworks/86114544/86114544_...   \n",
+       "\n",
+       "        pid                                    metadata_s3_uri  image_s3_size  \n",
+       "0  86114542  s3://dataset-pixiv/artworks/86114542/metadata....         310612  \n",
+       "1  86114543  s3://dataset-pixiv/artworks/86114543/metadata....        6745018  \n",
+       "2  86114544  s3://dataset-pixiv/artworks/86114544/metadata....        3538392  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "uris = [\"s3://dataset-pixiv/sagemaker/20240228_half_pixiv_optmize_workflow/0.todo.parquet\",\n",
     "        \"s3://dataset-pixiv/sagemaker/20240228_half_pixiv_optmize_workflow/1.todo.parquet\",\n",
     "        \"s3://dataset-pixiv/sagemaker/20240228_half_pixiv_optmize_workflow/2.todo.parquet\",]\n",
     "\n",
-    "results = ub.concurrent_loads(uris)"
+    "result_df = pd.concat(ub.concurrent_loads(uris))\n",
+    "ub.peeks(result_df)"
    ]
   },
   {
