fix: ub.loads: tempfile naming error on windows

--- a/noteooks/test_general.ipynb
+++ b/noteooks/test_general.ipynb
@@ -184,7 +184,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-13 08:02:25,062 [INFO] UniLogger: UniLoader.loads: .jpg LOADED from \"/tmp/tmpe133vzrb.jpg\" in 0.00s\n"
+      "2024-07-18 10:40:58,906 [INFO] UniLogger: UniLoader.loads: .jpg LOADED from \"/tmp/tmprso5usv1.jpg\" in 0.00s\n"
      ]
     },
     {
