feat: s3_client: adding generate_presigned_uri function; removing unused code

--- a/noteooks/test_general.ipynb
+++ b/noteooks/test_general.ipynb
@@ -518,6 +518,39 @@
     "\n",
     "ub.saves(test_dict, \"test_invalid_values2.jsonl\") # shouldn't contain \"NaN\" in the output file"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "presign test:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://bucket-external.s3.amazonaws.com/dataset/dataset_qft/moody_qft_danbooru.json?AWSAccessKeyId=AKIAVVWUPRZ2AC6O2S3I&Signature=0z3LgRw9wcdnSqcCmqX7VaqAU7Q%3D&Expires=1727805561'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import unibox as ub\n",
+    "\n",
+    "\n",
+    "uri = \"s3://bucket-external/dataset/dataset_qft/moody_qft_danbooru.json\"\n",
+    "\n",
+    "signed = ub.presigns(uri)\n",
+    "signed"
+   ]
   }
  ],
  "metadata": {
