feat: allowing human-readable date in presigns() expiration

--- a/noteooks/test_general.ipynb
+++ b/noteooks/test_general.ipynb
@@ -534,7 +534,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://bucket-external.s3.amazonaws.com/dataset/dataset_qft/moody_qft_danbooru.json?AWSAccessKeyId=AKIAVVWUPRZ2AC6O2S3I&Signature=0z3LgRw9wcdnSqcCmqX7VaqAU7Q%3D&Expires=1727805561'"
+       "'https://bucket-external.s3.amazonaws.com/dataset/dataset_qft/moody_qft_danbooru.json?AWSAccessKeyId=AKIAVVWUPRZ2AC6O2S3I&Signature=sXf%2FvVsHcWcBK8aA%2FBW5i4dseEw%3D&Expires=1759172427'"
       ]
      },
      "execution_count": 1,
@@ -548,7 +548,7 @@
     "\n",
     "uri = \"s3://bucket-external/dataset/dataset_qft/moody_qft_danbooru.json\"\n",
     "\n",
-    "signed = ub.presigns(uri)\n",
+    "signed = ub.presigns(uri, expiration=\"1y\")\n",
     "signed"
    ]
   }
