--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -6,47 +6,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import unibox as ub"
+    "import unibox as ub\n",
+    "json_dict = ub.loads(\"../tests/test_files/sample.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "json_dict = ub.loads(\"/rmt/yada/dev/unibox/tests/test_files/sample.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'quiz': {'sport': {'q1': {'question': 'Which one is correct team name in NBA?',\n",
-       "    'options': ['New York Bulls',\n",
-       "     'Los Angeles Kings',\n",
-       "     'Golden State Warriros',\n",
-       "     'Huston Rocket'],\n",
-       "    'answer': 'Huston Rocket'}},\n",
-       "  'maths': {'q1': {'question': '5 + 7 = ?',\n",
-       "    'options': ['10', '11', '12', '13'],\n",
-       "    'answer': '12'},\n",
-       "   'q2': {'question': '12 - 8 = ?',\n",
-       "    'options': ['1', '2', '3', '4'],\n",
-       "    'answer': '4'}}}}"
+       "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=1050x700>"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "json_dict"
+    "img = ub.loads(\"../tests/test_files/sample.jpg\")\n",
+    "\n",
+    "img.show()"
    ]
   }
  ],
