--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import unibox as ub\n",
-    "json_dict = ub.loads(\"../tests/test_files/sample.json\")"
+    "import unibox as ub"
    ]
   },
   {
@@ -16,52 +15,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "json_dict = ub.loads(\"../tests/test_files/sample.json\")\n",
     "ub.saves(json_dict, \"local.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "110.24s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "local.json  test_basics.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!ls"
+    "img = ub.loads(\"../tests/test_files/sample.jpg\")\n",
+    "img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=1050x700>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "img = ub.loads(\"../tests/test_files/sample.jpg\")\n",
-    "\n",
-    "img.show()"
+    "ub.saves(img, \"local.jpg\")"
    ]
   }
  ],
