twerak: using simplified log strings

--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -18,8 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-01-03 22:15:21 [INFO] loads: dict LOADED from \"../tests/test_files/sample.json\" in 0.00 seconds   [LocalBackend:JSONLoader -> builtins.dict]\u001b[0m\n",
-      "\u001b[37m2025-01-03 22:15:21 [INFO] saves: dict saved successfully to \"local.json\" in 0.00 seconds   [builtins.dict -> LocalBackend:JSONLoader]\u001b[0m\n"
+      "\u001b[37m2025-01-03 22:25:43 [INFO] loads: dict LOADED from \"../tests/test_files/sample.json\" in 0.00 seconds\u001b[0m\n",
+      "\u001b[37m2025-01-03 22:25:43 [INFO] saves: dict saved successfully to \"local.json\" in 0.00 seconds\u001b[0m\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-01-03 22:15:21 [INFO] loads: JpegImageFile LOADED from \"../tests/test_files/sample.jpg\" in 0.01 seconds   [LocalBackend:ImageLoader -> PIL.JpegImagePlugin.JpegImageFile]\u001b[0m\n"
+      "\u001b[37m2025-01-03 22:25:43 [INFO] loads: JpegImageFile LOADED from \"../tests/test_files/sample.jpg\" in 0.01 seconds\u001b[0m\n"
      ]
     },
     {
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-01-03 22:15:21 [INFO] saves: JpegImageFile saved successfully to \"local.jpg\" in 0.00 seconds   [PIL.JpegImagePlugin.JpegImageFile -> LocalBackend:ImageLoader]\u001b[0m\n"
+      "\u001b[37m2025-01-03 22:25:43 [INFO] saves: JpegImageFile saved successfully to \"local.jpg\" in 0.00 seconds\u001b[0m\n"
      ]
     }
    ],
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-01-03 22:08:38 [INFO] loads: Dataset LOADED from \"hf://incantor/aesthetic_eagle_5category_iter99\" in 1.62 seconds   [HuggingFaceBackend:None]\u001b[0m\n"
+      "\u001b[37m2025-01-03 22:16:55 [INFO] loads: Dataset LOADED from \"hf://incantor/aesthetic_eagle_5category_iter99\" in 1.59 seconds   [HuggingFaceBackend:None -> datasets.arrow_dataset.Dataset]\u001b[0m\n"
      ]
     }
    ],
@@ -123,35 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "datasets.arrow_dataset.Dataset\n"
-     ]
-    }
-   ],
-   "source": [
-    "cls = type(hf_df)\n",
-    "fully_qualified_name = f\"{cls.__module__}.{cls.__name__}\"\n",
-    "print(fully_qualified_name)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df = hf_df.to_pandas().head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -348,18 +320,19 @@
        "4                  4  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "test_df = hf_df.to_pandas().head()\n",
     "test_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +345,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "640d3e151d45434c806d45c92d4b4394",
+       "model_id": "0f44386ac84b4247bb2dd8016ec38319",
        "version_major": 2,
        "version_minor": 0
       },
@@ -386,7 +359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30c707cb36be4e3b83929400ee4f4513",
+       "model_id": "05b05a3de62744d79225c8323d70857e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -401,7 +374,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://huggingface.co/datasets/datatmp/tmp_df/commit/d242bb593b677c05589cfee6e366e1d563b9b680\n"
+      "https://huggingface.co/datasets/datatmp/tmp_df/commit/5f5b904a250d36e6965a6393c7ebe4446139a5db\n",
+      "\u001b[37m2025-01-03 22:18:54 [INFO] saves: DataFrame saved successfully to \"hf://datatmp/tmp_df\" in 1.23 seconds   [pandas.core.frame.DataFrame -> HuggingFaceBackend:NoneType]\u001b[0m\n"
      ]
     }
    ],
